--- a/tests/yaml/p.yml
+++ b/tests/yaml/p.yml
@@ -5,12 +5,10 @@ options:
     short: P
     description: path to the password storage directory
     type: Directory
-    scope: global
   - name: gnupg-home-dir
     short: G
     description: path to the GnuPG home directory
     type: Directory
-    scope: global
 arguments:
   - name: cmd
     description: p command to run
@@ -51,6 +49,8 @@ arguments:
         - name: keys
           description: manage keys used to encrypt passwords
           group: Setup
+          aliases:
+            - key
           function: ___p_keys
           arguments:
               - name: key_cmd
@@ -123,6 +123,8 @@ arguments:
         - name: groups
           description: manage groups of keys used to encrypt passwords
           group: Setup
+          aliases:
+            - group
           function: ___p_groups
           arguments:
               - name: group_cmd
@@ -140,8 +142,7 @@ arguments:
                         type: Array
                     grammar:
                         - arguments.group_name
-                        - arguments.group_keys
-                        - ...
+                        - arguments.group_keys...
                   - name: add
                     description: add keys to a group
                     function: ___p_group_add
@@ -153,8 +154,7 @@ arguments:
                         type: Array
                     grammar:
                         - arguments.group_name
-                        - arguments.group_keys
-                        - ...
+                        - arguments.group_keys...
                   - name: remove
                     description: remove keys from a group
                     function: ___p_group_remove
@@ -166,8 +166,7 @@ arguments:
                         type: Array
                     grammar:
                         - arguments.group_name
-                        - arguments.group_keys
-                        - ...
+                        - arguments.group_keys...
                   - name: delete
                     description: delete a group
                     function: ___p_group_delete
@@ -185,61 +184,117 @@ arguments:
         - name: dirs
           description: manage keys associated with directories
           group: Setup
+          aliases:
+            - dir
+          function: ___p_dirs
         - name: gpg
           description: manage keys in GnuPG's database
           group: Setup
+          function: ___p_gpg
         - name: cd
           description: change directories
           group: Basic navigation
+          function: ___p_cd
         - name: cp
           description: copy the contents of one file to another location
           group: Basic navigation
+          aliases:
+            - copy
+          function: ___p_cp
         - name: ls
           description: list files and directories
           group: Basic navigation
+          aliases:
+            - list
+          function: ___p_ls
         - name: mkdir
           description: make a new directory
           group: Basic navigation
+          aliases:
+            - m
+          function: ___p_mkdir
         - name: mv
           description: move a file to another location
           group: Basic navigation
+          aliases:
+            - move
+          function: ___p_mv
         - name: rm
           description: remove the specified path from the password store
           group: Basic navigation
+          aliases:
+            - remove
+          function: ___p_rm
         - name: cat
           description: show the contents of a file
           group: Managing passwords
+          aliases:
+            - show
+            - c
+          function: ___p_cat
         - name: edit
           description: edit the contents of a file
           group: Managing passwords
+          aliases:
+            - e
+          function: ___p_edit
         - name: generate
           description: generate a new password
           group: Managing passwords
+          aliases:
+            - gen
+          function: ___p_generate
         - name: json
           description: manipulate a JSON-encoded password file
           group: Managing passwords
+          aliases:
+            - j
+          function: ___p_json
         - name: find
           description: list all files in the password store
           group: Search commands
+          function: ___p_find
         - name: locate
           description: locate files and directories matching a pattern
           group: Search commands
+          aliases:
+            - lt
+          function: ___p_locate
         - name: search
           description: search the contents of files for a match
           group: Search commands
+          function: ___p_search
         - name: decrypt
           description: extract a file in the password store
           group: Storing files
+          function: ___p_decrypt
         - name: encrypt
           description: store a file into the password store
           group: Storing files
+          function: ___p_encrypt
         - name: open
           description: run a command to view a file in the password store
           group: Storing files
+          function: ___p_open
         - name: git
           description: run git commands in the password store
+          aliases:
+            - gt
+          function: ___p_git
         - name: pass
           description: pass a command through to pass (for accessing extensions)
+          aliases:
+            - through
+            - thru
+            - t
+          function: ___p_through
+        - name: sync
+          description: sync a remote branch with a remote one
+          function: ___p_sync
+catch_remainder: True
+remainder: cmd_args
+function: _p
 grammar:
   - "[options]"
   - "arguments.cmd"
+  - "[vars.cmd_args...]"
