[tests/p]: disable mixed arguments, options
Signed-off-by: Alexander Scheel <alexander.m.scheel@gmail.com>

--- a/tests/yaml/p.yml
+++ b/tests/yaml/p.yml
@@ -468,6 +468,7 @@ arguments:
         - name: sync
           description: sync a remote branch with a remote one
           function: ___p_sync
+mixed_options_arguments: False
 catch_remainder: True
 remainder: cmd_args
 function: _p
