--- a/tests/yaml/p.yml
+++ b/tests/yaml/p.yml
@@ -74,6 +74,7 @@ arguments:
                       - name: key_id
                         description: GPG Key ID to import
                     grammar:
+                        - "[options]"
                         - arguments.key_nickname
                         - arguments.key_id
                   - name: export
@@ -117,9 +118,12 @@ arguments:
                         description: nickname of the key to update
                     grammar:
                         - arguments.key_nickname
+          catch_remainder: true
+          remainder: key_cmd_args
           grammar:
             - "[options]"
             - "arguments.key_cmd"
+            - "[vars.key_cmd_args...]"
         - name: groups
           description: manage groups of keys used to encrypt passwords
           group: Setup
