--- a/tests/yaml/p.yml
+++ b/tests/yaml/p.yml
@@ -25,6 +25,7 @@ arguments:
         grammar:
           - "[options]"
           - "arguments.uri"
+        mixed_options_arguments: true
       - name: create
         description: create a password store from scratch
         group: Setup
@@ -33,6 +34,7 @@ arguments:
           - name: without-git
             short: n
             description: don't create the password store with git
+            var: init_git
             type: TrueFalse
             aliases:
               - without-git
@@ -47,6 +49,7 @@ arguments:
         grammar:
           - "[options]"
           - "arguments.gpg_id"
+        mixed_options_arguments: true
       - name: keys
         description: manage keys used to encrypt passwords
         group: Setup
@@ -90,10 +93,10 @@ arguments:
                   - arguments.key_nickname
               - name: list
                 description: list all keys in the key manager
-                function: ___p_keys_list
+                function: ___p_key_list
               - name: regen
                 description: recreate all .gpg-id files and re-encrypt passwords
-                function: ___p_keys_regen
+                function: ___p_key_regen
               - name: delete
                 description: delete a key from the key manager
                 function: ___p_key_delete
@@ -352,18 +355,23 @@ arguments:
         options:
           - name: absolute
             short: a
+            var: cd_mode
+            constant: absolute
             description: treat as an absolute path
-            type: FalseTrue
+            type: Constant
           - name: relative
             short: r
+            var: cd_mode
+            constant: relative
             description: treat as a relative path
-            type: FalseTrue
+            type: Constant
         arguments:
           - name: cd_path
             description: path to change into; absolute if prefixed with '/' or --absolute is specified, else relative
         grammar:
           - "[options]"
-          - arguments.cd_path
+          - "[arguments.cd_path]"
+        mixed_options_arguments: true
       - name: cp
         description: copy the contents of one file to another location
         group: Basic navigation
@@ -480,27 +488,30 @@ arguments:
         options:
           - name: raw
             short: r
+            var: cat_raw
             type: FalseTrue
             description: raw, uncolorized, machine-readable output
           - name: json-only
             short: j
+            var: cat_json_only
             type: FalseTrue
             aliases:
               - json
             description: only output the json portion of these password entries, if present
           - name: password-only
             short: p
+            var: cat_password_only
             type: FalseTrue
             aliases:
               - password
             description: only output the first line of the password entry
           - name: no-color
             short: n
+            var: cat_colorize
             antonyms:
               - with-color
               - colorize
               - color
-            var: color
             type: TrueFalse
             description: don't colorize the output
         arguments:
@@ -533,18 +544,24 @@ arguments:
           - name: format
             short: f
             description: format string for generated password
+            type: String
           - name: random
             short: r
+            var: mode
+            type: Constant
+            constant: random
             aliases:
               - rand
-            type: FalseTrue
             description: generate a 30 alphanumeric character password
           - name: phrase
             short: p
-            type: FalseTrue
+            var: mode
+            type: Constant
+            constant: phrase
             description: generate a 3 word, 12 number phrase password
           - name: save
             short: s
+            var: name
             description: save generated password to the specified password entry
         grammar:
           - "[options]"
@@ -566,13 +583,16 @@ arguments:
                 function: ___p_json_get
                 arguments:
                   - name: file
+                    var: j_file
                     description: file to read
                   - name: key
+                    var: j_key
+                    default: password
                     description: key to read out of the file; defaults to password
                 grammar:
                   - "[options]"
                   - "arguments.file"
-                  - "arguments.key"
+                  - "[arguments.key]"
               - name: set
                 description: set a key's value in a file's JSON data
                 aliases:
@@ -580,15 +600,18 @@ arguments:
                 function: ___p_json_set
                 arguments:
                   - name: file
+                    var: j_file
                     description: file to write
                   - name: key
+                    var: j_key
                     description: key to set in the file
                   - name: value
+                    var: j_value
                     description: value of the key
                 grammar:
                   - "[options]"
                   - "arguments.file"
-                  - "arguments.key"
+                  - "[arguments.key]"
                   - "arguments.value"
               - name: retype
                 description: type the key's value from a file's JSON data
@@ -601,11 +624,12 @@ arguments:
                   - name: file
                     description: file to read
                   - name: key
+                    default: password
                     description: key to read out of the file; defaults to password
                 grammar:
                   - "[options]"
                   - "arguments.file"
-                  - "arguments.key"
+                  - "[arguments.key]"
               - name: kinit
                 description: obtain a Kerberos ticket from information in the specified file's JSON data
                 aliases:
@@ -673,8 +697,8 @@ arguments:
             description: filesystem path to store the decrypted file at
         grammar:
           - "[options]"
-          - arguments.entry
-          - arguments.result_path
+          - "arguments.entry"
+          - "[arguments.result_path]"
       - name: encrypt
         description: store a file into the password store
         group: Storing files
@@ -742,8 +766,10 @@ arguments:
             description: local branch to sync from; defaults to the current branch
           - name: origin
             description: remote origin to sync to; defaults to origin
+            default: origin
           - name: remote
             description: remote branch to sync to; defaults to master
+            default: master
         grammar:
           - "[options]"
           - "[arguments.branch]"
